fix: gray tab bg in dark mode

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,7 +14,6 @@ body {
 html {
   display: block;
   margin: 0 auto;
-  // max-width: 1280px;
 }
 
 body {
@@ -188,6 +187,10 @@ header.text-light {
 
 header.text-light .settings-button {
   filter: invert(1);
+}
+
+header.text-light .nav-link.active {
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 main {
